# androidperf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
plan/: 01-architecture.md  02-future-metrics.md  03-automation-integrations.md  04-publishing.md
src/androidperf/: cli.py  device.py  session.py  summary.py
src/androidperf/collectors/: __init__.py  activity.py  battery.py  cpu.py  fps.py  memory.py  network.py  thermal.py
src/androidperf/report/: generate.py  template.html.j2
src/androidperf/ui/: live.py  summary.py
tests/: test_extras.py  test_parsers.py  test_report.py
tests/fixtures/: activities.txt  battery.txt  gfxinfo.txt  meminfo.txt  netstats.txt  thermal.txt  top.txt  xt_qtaguid.txt
