[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "androidperf"
version = "0.1.0"
description = "ADB-based Android performance metric recorder with live TUI and HTML report"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "adbutils>=2.8.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
androidperf = "androidperf.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/androidperf"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: typer.Option/Argument in defaults is the idiomatic pattern.
# BLE001: intentional broad-except inside the session loop — one failing
# collector should never abort a recording.
ignore = ["B008", "BLE001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
